--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ EMAIL: ccervera@uci.edu
           href="https://fonts.googleapis.com/css?family=Roboto">
 
     <link rel="stylesheet"
-          href="https://fonts.googleapis.com/css?family=Roboto Mono">
+          href="https://fonts.googleapis.com/css?family=Roboto%20Mono">
 
     <link href="style.css" rel="stylesheet" type="text/css" />
 
