--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@ EMAIL: ccervera@uci.edu
 <!-- NavBar -->
 <nav class="navbar navbar-expand-lg navbar-light  ps-3 py-3 fs-4"  style="background-color: #e3f2fd;">
     <div class="container-fluid">
-        <a class="navbar-brand fs-4 fw-bold" href="#">
-            <img src="letter_c.png" alt="" width="30" height="31" class="d-inline-block align-text-top">
-            <img src="letter_c.png" alt="" width="30" height="31" class="d-inline-block align-text-top">
+        <a class="navbar-brand fs-4 fw-bold" href="#Home">
+            <img src="letter_c.png" alt="letter c" width="30" height="31" class="d-inline-block align-text-top">
+            <img src="letter_c.png" alt="letter c" width="30" height="31" class="d-inline-block align-text-top">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -46,7 +46,7 @@ EMAIL: ccervera@uci.edu
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-3 mb-lg-0 ">
                 <li class="nav-item">
-                    <a class="nav-link " aria-current="page" href="#">Home</a>
+                    <a class="nav-link " aria-current="page" href="#Home">Home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#About">About Me </a>
@@ -61,7 +61,7 @@ EMAIL: ccervera@uci.edu
 </nav>
 
 <!-- Title -->
-<div class="container py-5">
+<div class="container py-5" id="Home">
     <h1 class="text-center">
         “Technology is best
     </h1>
@@ -179,12 +179,12 @@ EMAIL: ccervera@uci.edu
 
 <div>
     <footer class="d-flex  justify-content-between align-items-center mt-4 border-top "
-            style="background-color: #6c757d;">
+            style="background-color: #BCC2C8;">
         <div class="container">
             <div class="col-md-4 d-flex align-items-center ps-5">
-                <img src="letter_c.png" alt="" width="30" height="31" class="d-inline-block align-text-top">
-                <img src="letter_c.png" alt="" width="30" height="31" class="d-inline-block align-text-top">
-                <p class="pt-4 ps-3">
+                <img src="letter_c.png" alt="letter c" width="30" height="31" class="d-inline-block align-text-top">
+                <img src="letter_c.png" alt="letter c" width="30" height="31" class="d-inline-block align-text-top">
+                <p class="pt-4 ps-3" >
                     Cristian Cervera
                 </p>
 
