Updates to Format and Footer

--- a/aboutme.html
+++ b/aboutme.html
@@ -63,46 +63,35 @@ EMAIL: ccervera@uci.edu
 <!-- Title -->
 <div class="container py-5" id="Home">
     <h1 class="text-center">
-        “Technology is best
+        “Be yourself; everyone
     </h1>
     <h1 class="text-end">
-        when it brings people together.”
+         else is already taken"
     </h1>
     <h1 class="pt-4">
-        Software Engineer
+        True to myself
     </h1>
 </div>
 
-<!-- Intro -->
-<div class="container py-5">
-    <div class="row">
-        <div class="col-sm-6 pb-5">
-            <img src="profile-pic.png" class="img-fluid" alt="profile picture">
-        </div>
-        <div class="col-sm-6 pb-5">
-            <h1 class=" ">
-                Hello World!
-            </h1>
-            <h1 class=" " >
-                I'm Cristian Cervera
-            </h1>
-            <br>
-            <p class="pt-3 ps-5  ">
-                A student studying software engineering <br>at the University of California, Irvine
-            </p>
-            <p class="pt-4 ps-5">
-                <a  href="https://www.linkedin.com/in/cristiancervera/">
-                    <img src="linkedin.png" alt="linkedin logo" width="60" height="60" class="d-inline-block align-text-top">
-                </a>
-                <img src="instagram.png" alt="instagram logo" width="60" height="60" class="d-inline-block align-text-top">
 
-                <img src="github.png" alt="github logo" width="60" height="60" class="d-inline-block align-text-top">
+<!-- About -->
+<div class="container pt-5" id="About">
+    <h1 class="text-center">
+        About Me
+    </h1>
+    <div class="row">
+        <div class="col-sm-6 pb-5 ps-5 ">
+            <img src="read.png" width="300" height="300" class="img-fluid" alt="person reading book">
+        </div>
+
+        <div class="col-sm-6 pt-5 ">
+            <p class="pt-3 ps-5 lh-lg ">
+                I am currently a Software Engineering Student at the University of California, Irvine.
+                When I'm not coding, I enjoy reading, hiking, and skateboarding.
             </p>
         </div>
     </div>
-
 </div>
-
 
 
 <!-- Footer -->
@@ -120,6 +109,7 @@ EMAIL: ccervera@uci.edu
         </div>
     </footer>
 </div>
+
 
 
 </body>
