--- a/projects.html
+++ b/projects.html
@@ -63,47 +63,41 @@ EMAIL: ccervera@uci.edu
 <!-- Title -->
 <div class="container py-5" id="Home">
     <h1 class="text-center">
-        “Technology is best
+        “Set your course by the stars,not by
     </h1>
     <h1 class="text-end">
-        when it brings people together.”
+        the lights of every passing ship.”
     </h1>
     <h1 class="pt-4">
-        Software Engineer
+        Creation and Creativity
     </h1>
 </div>
 
-<!-- Intro -->
-<div class="container py-5">
-    <div class="row">
-        <div class="col-sm-6 pb-5">
-            <img src="profile-pic.png" class="img-fluid" alt="profile picture">
-        </div>
-        <div class="col-sm-6 pb-5">
-            <h1 class=" ">
-                Hello World!
-            </h1>
-            <h1 class=" " >
-                I'm Cristian Cervera
-            </h1>
-            <br>
-            <p class="pt-3 ps-5  ">
-                A student studying software engineering <br>at the University of California, Irvine
-            </p>
-            <p class="pt-4 ps-5">
-                <a  href="https://www.linkedin.com/in/cristiancervera/">
-                    <img src="linkedin.png" alt="linkedin logo" width="60" height="60" class="d-inline-block align-text-top">
-                </a>
-                <img src="instagram.png" alt="instagram logo" width="60" height="60" class="d-inline-block align-text-top">
 
-                <img src="github.png" alt="github logo" width="60" height="60" class="d-inline-block align-text-top">
+
+<!-- Projects -->
+<div class="container py-5" id="Projects">
+    <h1 class="text-center">
+        Projects
+    </h1>
+    <div class="row ps-5 py-5">
+
+
+        <div class="col-sm-6">
+            <img src="admin_dash.png" width="500" height="400" class="img-fluid" alt="Camp Izza Website Admin Dashboard">
+        </div>
+
+        <div class="col-sm-6 mt-4">
+            <h2>
+                Camp Izza Online Dashboard
+            </h2>
+            <p class="ps-5 pt-3">
+                Collaborated with a team of engineers to create a detailed user and administrative web application for a youth
+                summer camp
             </p>
         </div>
     </div>
-
 </div>
-
-
 
 <!-- Footer -->
 <div>
