--- a/tech.html
+++ b/tech.html
@@ -63,46 +63,47 @@ EMAIL: ccervera@uci.edu
 <!-- Title -->
 <div class="container py-5" id="Home">
     <h1 class="text-center">
-        “Technology is best
+        “Innovation is the
     </h1>
     <h1 class="text-end">
-        when it brings people together.”
+        calling card of the future”
     </h1>
     <h1 class="pt-4">
-        Software Engineer
+        Always innovating
     </h1>
 </div>
 
-<!-- Intro -->
-<div class="container py-5">
-    <div class="row">
-        <div class="col-sm-6 pb-5">
-            <img src="profile-pic.png" class="img-fluid" alt="profile picture">
-        </div>
-        <div class="col-sm-6 pb-5">
-            <h1 class=" ">
-                Hello World!
-            </h1>
-            <h1 class=" " >
-                I'm Cristian Cervera
-            </h1>
-            <br>
-            <p class="pt-3 ps-5  ">
-                A student studying software engineering <br>at the University of California, Irvine
-            </p>
-            <p class="pt-4 ps-5">
-                <a  href="https://www.linkedin.com/in/cristiancervera/">
-                    <img src="linkedin.png" alt="linkedin logo" width="60" height="60" class="d-inline-block align-text-top">
-                </a>
-                <img src="instagram.png" alt="instagram logo" width="60" height="60" class="d-inline-block align-text-top">
 
-                <img src="github.png" alt="github logo" width="60" height="60" class="d-inline-block align-text-top">
-            </p>
+<!-- Technologies -->
+<div class="container py-5" id="Technologies">
+    <h1 class="text-center">
+        Technologies
+    </h1>
+    <div class="row">
+        <div class="col-sm-6 pt-5 ">
+            <div class="row ps-5">
+                <h2>
+                    Languages
+                </h2>
+                <p class="ps-5">
+                    Python, C++, Java
+                </p>
+            </div>
+            <div class="row ps-5 pt-3">
+                <h2>
+                    Tools
+                </h2>
+                <p class="ps-5">
+                    JetBrain Products, Git, Github, Google Cloud Platform, React
+                </p>
+            </div>
+
+        </div>
+        <div class="col-sm-6 py-5 ps-4 " >
+            <img src="gears.png" width="300" height="300" class="img-fluid" alt="mechanical gears">
         </div>
     </div>
-
 </div>
-
 
 
 <!-- Footer -->
@@ -120,7 +121,6 @@ EMAIL: ccervera@uci.edu
         </div>
     </footer>
 </div>
-
 
 </body>
 </html>
