Updates to readme.txt

--- a/aboutme.html
+++ b/aboutme.html
@@ -69,13 +69,13 @@ EMAIL: ccervera@uci.edu
          else is already taken"
     </h1>
     <h1 class="pt-4">
-        True to myself
+        True to Myself
     </h1>
 </div>
 
 
 <!-- About -->
-<div class="container pt-5" id="About">
+<div class="container pt-5 pb-5 mb-4" id="About">
     <h1 class="text-center">
         About Me
     </h1>
