--- a/tech.html
+++ b/tech.html
@@ -69,7 +69,7 @@ EMAIL: ccervera@uci.edu
         calling card of the future”
     </h1>
     <h1 class="pt-4">
-        Always innovating
+        Always Innovating
     </h1>
 </div>
 
@@ -97,7 +97,6 @@ EMAIL: ccervera@uci.edu
                     JetBrain Products, Git, Github, Google Cloud Platform, React
                 </p>
             </div>
-
         </div>
         <div class="col-sm-6 py-5 ps-4 " >
             <img src="gears.png" width="300" height="300" class="img-fluid" alt="mechanical gears">
